# pw-o-matic

./: CMakeLists.txt  README.md  gui.cpp  gui.glade  main.cpp  pwgen.cpp  pwgen.hpp
